--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "cookie": "^0.4.1",
     "expo": "~43.0.0",
+    "expo-checkbox": "~2.0.0",
+    "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "express": "^4.17.1",
     "react": "17.0.1",
@@ -21,11 +24,12 @@
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-paper": "^4.10.0",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-select-multiple": "^2.1.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
