--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -25,11 +26,13 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.10.1",
+    "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-select-multiple": "^2.1.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
