--- a/app.json
+++ b/app.json
@@ -23,10 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.eliseu7.app_goodbeach"
     }
-     // "web": {
-     // "favicon": "./assets/favicon.png"
-    //}
   }
 }
